fix(css): no more overflow in bigger or smallers screens

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   height: 100%;
   background-color: var(--silver--sand);
   font-family: "Roboto", serif;
+  overflow: hidden;
 }
 
 main {
@@ -178,7 +179,7 @@ form {
 
 .content {
   width: 100%;
-  max-height: 200px;
+  max-height: 50vh;
   display: flex;
   flex-direction: column;
   gap: 40px;
